--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile
-    image: todo-server
+    image: aariasr/todo-server
     container_name: todo-node-server
     command: /usr/src/app/node_modules/.bin/nodemon server.js
     volumes:
@@ -32,7 +32,7 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
-    image: todo-client
+    image: aariasr/todo-client
     stdin_open: true
     container_name: todo-react-client
     command: yarn start
